# worky_mcstreamline

./: .dockerignore  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  Unit_Import_Template.xlsx  astea_to_template.py
backend/: .env.example  Cargo.toml
backend/.sqlx/: query-0639262b72d2f07563f9c6910bcc6f7e3677dbcdf4b6b24bd4d40d4877c7be2c.json  query-0fc4d0ba14921ea72d6ae7a14f48aac2f8df64ca3831ae68f5023e1d6fdf6a07.json  query-214429f91089f609ddad2304e28b571662a74cfcf56da5ab37f0e58f8f9a2c8d.json  query-4411dd75f517e0a3b1fc291efb428206d0ec408a00c0f3a08b142af60f6e5eea.json  query-a369dcd939c39eb2a3731d1bf8bbb33968d47ce7a9dc72b301266a28fd4753f8.json  query-d1ace29711a64d6313db95881c08ed78e23b9b06c7a4682ccb6c647ce96c1642.json  query-d82368452974757c05d3a9a3f6c5a9841073f220c6e9e14f17cf934c6aeefbdd.json
backend/migrations/: 20260324000000_initial_schema.sql  20260325002_job_schedule.sql  20260325003_seed_technicians.sql  20260325_001_technicians.sql  20260326002_add_astea_site_id.sql  20260326004_issue_cxalloy_url.sql  20260326_001_msow_drafts.sql  20260326_002_issue_line_links.sql
backend/src/: config.rs  db.rs  error.rs  main.rs  middleware.rs  routes.rs
backend/src/handlers/: auth.rs  bom.rs  campaigns.rs  commissioning.rs  components.rs  contractors.rs  issue_line_links.rs  issues.rs  materials.rs  mod.rs  msow.rs  notes.rs  schedule.rs  service_tickets.rs  site_contacts.rs  site_documents.rs  site_forms.rs  site_job_numbers.rs  sites.rs  sycool_systems.rs  tickets.rs  todos.rs  unit_programs.rs  units.rs  warranty.rs
backend/templates/: msow_template.docx
(+269 files in other folders)
